--- a/bbs/templates/login.html
+++ b/bbs/templates/login.html
@@ -3,26 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン</title>
+    <link href="./css/bootstrap.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>ログイン</h1>
-  <% if (errors) { %>
-    <ul>
-    <% for (const e of errors) { %>
-      <li><%= e %></li>
-    <% } %>
-    </ul>
-  <% } %>
-  <form method="POST">
-    <div>
-      <label>Login ID: <input type="text" name="loginId" value="<%= loginId %>"></label>
-    </div>
-    <div>
-      <label>Password: <input type="password" name="password"></label>
-    </div>
-    <div>
-      <button type="submit">ログイン</button>
-    </div>
-  </form>
+  <div class="container" id="loginbox">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">ログイン</h3>
+          </div>
+
+          <div class="panel-body">
+            <% if (errors) { %>
+              <% for (const e of errors) { %>
+                <div class="alert alert-danger"><%= e %></div>
+              <% } %>
+            <% } %>
+            <form method="POST">
+              <div class="form-group">
+                <label for="loginId">Login ID</label>
+                <input type="text" id="loginId" name="loginId" value="<%= loginId %>" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" class="form-control">
+              </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary">ログイン</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3"></div>
+  </div>
 </body>
 </html>
