Bootstrap などを全体で共有するように

--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>BBS</title>
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>BBS</title>
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -32,7 +32,7 @@
               <input type="hidden" name="owner" value="<%= owner %>">
               <button type="submit" class="btn btn-primary">投稿</button>
             </div>
-          </fieldset>      
+          </fieldset>
         </form>
       </div>
       <div class="col-md-2"></div>
