--- a/bbs/templates/login.html
+++ b/bbs/templates/login.html
@@ -11,6 +11,15 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
+
+        <div class="descriptionbox">
+          <h2>掲示板へのログイン</h2>
+          <p>
+            ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインすることができますが、
+            シングルクォーテーション 「'」などを入力し、モニタにどのような結果が表示されているか確認してみましょう！
+          </p>
+        </div>
+
         <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title">ログイン</h3>
