--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <a href="/bbs/logout">ログアウト</a>
-      <h1>BBS</h1>
+      <h1>ビギクラ! BBS</h1>
     </header>
   </div>
 
@@ -18,43 +18,56 @@
     <div class="row" id="inputbox">
       <div class="col-md-2"></div>
       <div class="col-md-8">
-        <form action="/bbs/post" method="post">
-          <fieldset>
-            <div class="form-group">
-              <label for="inputTitle">タイトル</label>
-              <input type="text" id="inputTitle" name="title" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="inputBody">本文</label>
-              <textarea name="body" class="form-control" rows="5"></textarea>
-            </div>
-            <div class="form-group text-center">
-              <input type="hidden" name="owner" value="<%= owner %>">
-              <button type="submit" class="btn btn-primary">投稿</button>
-            </div>
-          </fieldset>
-        </form>
+        <div class="descriptionbox">
+          <h2>掲示板への投稿</h2>
+          <p>
+            投稿すると一覧の下に投稿内容が表示されます。<br />
+            単純に投稿したときの結果やログイン時同様にシングルクォーテーション「'」などを入力したときの結果を見てみましょう。
+            投稿者の名前を変更することもできます。
+          </p>
+        </div>
+
+        <div id="bbsentrybox">
+          <form action="/bbs/post" method="post">
+            <fieldset>
+              <div class="form-group">
+                <label for="inputTitle">タイトル</label>
+                <input type="text" id="inputTitle" name="title" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="inputBody">本文</label>
+                <textarea name="body" class="form-control" rows="5"></textarea>
+              </div>
+              <div class="form-group text-center">
+                <input type="hidden" name="owner" value="<%= owner %>">
+                <button type="submit" class="btn btn-primary">投稿</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
       </div>
       <div class="col-md-2"></div>
     </div>
 
     <div class="row" id="bbsbox">
-      <table class="table table-striped table-bordered">
+      <h2>一覧</h2>
+      <% for (const row of rows) { %>
+      <table class="table table-bordered">
         <thead>
           <tr>
-            <th width="70%">タイトル</th>
-            <th>投稿者</th>
+            <th width="70%">タイトル：<%= row.title %> </th>
+            <th class="postowner">投稿者：<%= row.owner %></th>
           </tr>
         </thead>
         <tbody>
-          <% for (const row of rows) { %>
           <tr>
-            <td><a href="/bbs/<%= row.id %>"><%= row.title %></a></td>
-            <td><%= row.owner %></td>
+            <td colspan="2">
+                <%= row.body %>
+            </td>
           </tr>
-          <% } %>
         </tbody>
       </table>
+      <% } %>
     </div>
   </div>
 
