issues #6 説明文の修正

--- a/bbs/templates/login.html
+++ b/bbs/templates/login.html
@@ -16,7 +16,7 @@
           <h2>掲示板へのログイン</h2>
           <p>
             ログイン ID に <code>admin</code> パスワードに <code>admin</code> でログインすることができますが、
-            シングルクォーテーション 「'」などを入力し、モニタにどのような結果が表示されているか確認してみましょう！
+            他にも方法があるかも！？モニタにどのような結果が表示されているか確認しながら色々試してみましょう！
           </p>
         </div>
 
