--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -21,9 +21,7 @@
         <div class="descriptionbox">
           <h2>掲示板への投稿</h2>
           <p>
-            投稿すると一覧の下に投稿内容が表示されます。<br />
-            単純に投稿したときの結果やログイン時同様にシングルクォーテーション「'」などを入力したときの結果を見てみましょう。
-            投稿者の名前を変更することもできます。
+            投稿すると一覧の下に投稿内容が表示されます。投稿したときのモニターの表示を見ながら色々試してみましょう。
           </p>
         </div>
 
