BBS 環境を複数実行できるように

--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header>
-      <a href="/bbs/logout">ログアウト</a>
+      <a href="./logout">ログアウト</a>
       <h1>投稿: <%- row.title %></h1>
     </header>
   </div>
