--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header>
-      <a href="/bbs/logout">ログアウト</a>
+      <a href="./logout">ログアウト</a>
       <h1>ビギクラ! BBS</h1>
     </header>
   </div>
@@ -26,7 +26,7 @@
         </div>
 
         <div id="bbsentrybox">
-          <form action="/bbs/post" method="post">
+          <form action="./post" method="post">
             <fieldset>
               <div class="form-group">
                 <label for="inputTitle">タイトル</label>
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <label for="inputBody">本文</label>
-                <textarea name="body" class="form-control" rows="5"></textarea>
+                <textarea id="inputBody" name="body" class="form-control" rows="5"></textarea>
               </div>
               <div class="form-group text-center">
                 <input type="hidden" name="owner" value="<%- owner %>">
