BBS にヘッダーを付けて、モニターやヒント (未実装) の起動が直接できるように

--- a/bbs/templates/login.html
+++ b/bbs/templates/login.html
@@ -7,6 +7,15 @@
   <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav pull-right">
+        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="アプリで実行される SQL 文がや結果をリアルタイムで見ることができます!">モニター</a></li>
+        <li><a href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="container" id="loginbox">
     <div class="row">
       <div class="col-md-3"></div>
