--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -7,12 +7,18 @@
   <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <header>
-      <a href="./logout">ログアウト</a>
-      <h1>ビギクラ! BBS</h1>
-    </header>
-  </div>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li><a href="./logout">ログアウト</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav pull-right">
+        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="アプリで実行される SQL 文がや結果をリアルタイムで見ることができます!">モニター</a></li>
+        <li><a class="bbs-show-hint" href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <div class="container">
     <div class="row" id="inputbox">
@@ -69,5 +75,9 @@
     </div>
   </div>
 
+  <script src="/js/jquery-2.2.3.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
