--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -15,7 +15,7 @@
 
       <ul class="nav navbar-nav pull-right">
         <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="アプリで実行される SQL 文がや結果をリアルタイムで見ることができます!">モニター</a></li>
-        <li><a href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
+        <li><a class="bbs-show-hint" href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
       </ul>
     </div>
   </nav>
