--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -5,6 +5,7 @@
   <title>投稿: <%- row.title %></title>
   <link href="/css/bootstrap.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -50,5 +51,9 @@
     </div>
   </div>
 
+  <script src="/js/jquery-2.2.3.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
