--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -5,6 +5,7 @@
   <title>BBS</title>
   <link href="/css/bootstrap.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -24,13 +25,6 @@
     <div class="row" id="inputbox">
       <div class="col-md-2"></div>
       <div class="col-md-8">
-        <div class="descriptionbox">
-          <h2>掲示板への投稿</h2>
-          <p>
-            投稿すると一覧の下に投稿内容が表示されます。投稿したときのモニターの表示を見ながら色々試してみましょう。
-          </p>
-        </div>
-
         <div id="bbsentrybox">
           <form action="./post" method="post">
             <fieldset>
@@ -44,7 +38,7 @@
               </div>
               <div class="form-group text-center">
                 <input type="hidden" name="owner" value="<%- owner %>">
-                <button type="submit" class="btn btn-primary">投稿</button>
+                <button type="submit" class="btn btn-primary bbs-hint" data-placement="top" data-content="投稿すると一覧の下に投稿内容が表示されます。投稿したときのモニターの表示を見ながら色々試してみましょう!">投稿</button>
               </div>
             </fieldset>
           </form>
