--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -11,6 +11,10 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
+        <li class="active"><a href="./">掲示板</a></li>
+        <% if (login.isAdmin) { %>
+        <li><a href="./users">ユーザー一覧</a></li>
+        <% } %>
         <li><a href="./logout">ログアウト</a></li>
       </ul>
 
