--- a/bbs/templates/users.html
+++ b/bbs/templates/users.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>投稿: <%- row.title %></title>
+  <title>ユーザー一覧</title>
   <link href="/css/bootstrap.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -11,8 +11,9 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <% if (user.isAdmin) { %>
-        <li><a href="./users">ユーザー一覧</a></li>
+        <li><a href="./">掲示板</a></li>
+        <% if (login.isAdmin) { %>
+        <li class="active"><a href="./users">ユーザー一覧</a></li>
         <% } %>
         <li><a href="./logout">ログアウト</a></li>
       </ul>
@@ -25,33 +26,23 @@
   </nav>
 
   <div class="container">
-    <header>
-      <h1>投稿: <%- row.title %></h1>
-    </header>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <table class="table table-striped table-borded">
-        <tbody>
-          <tr>
-            <th width="25%">タイトル</th>
-            <td><%- row.title %></td>
-          </tr>
-          <tr>
-            <th>本文</th>
-            <td><%- row.body %></td>
-          </tr>
-          <tr>
-            <th>投稿者</th>
-            <td><%- row.owner %></td>
-          </tr>
-          <tr>
-            <td colspan="2" class="text-center"><a href="/bbs" class="btn btn-default">一覧へ戻る</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <h2>ユーザー一覧</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="text-center">Login ID</th>
+          <th class="text-center">管理者</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% users.forEach(user => { %>
+        <tr>
+          <td><%- user.name %></td>
+          <td class="text-center"><%- user.isAdmin ? '○' : '' %></td>
+        </tr>
+        <% }) %>
+      </tbody>
+    </table>
   </div>
 
   <script src="/js/jquery-2.2.3.min.js"></script>
