--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <% if (user.isAdmin) { %>
+        <% if (login.isAdmin) { %>
         <li><a href="./users">ユーザー一覧</a></li>
         <% } %>
         <li><a href="./logout">ログアウト</a></li>
@@ -32,7 +32,7 @@
 
   <div class="container">
     <div class="row">
-      <table class="table table-striped table-borded">
+      <table class="table">
         <tbody>
           <tr>
             <th width="25%">タイトル</th>
@@ -40,17 +40,21 @@
           </tr>
           <tr>
             <th>本文</th>
-            <td><%- row.body %></td>
+            <td><pre><%- row.body %></pre></td>
           </tr>
           <tr>
             <th>投稿者</th>
             <td><%- row.owner %></td>
           </tr>
           <tr>
-            <td colspan="2" class="text-center"><a href="/bbs" class="btn btn-default">一覧へ戻る</a></td>
+            <th>投稿日時</th>
+            <td><%- row.posted %></td>
           </tr>
         </tbody>
       </table>
+      <div class="text-center">
+        <a href="./" class="btn btn-default">一覧へ戻る</a>
+      </div>
     </div>
   </div>
 
