--- a/bbs/templates/edit.html
+++ b/bbs/templates/edit.html
@@ -61,6 +61,7 @@
         <input type="hidden" name="id" value="<%- row.id %>">
         <div class="text-center">
           <button type="submit" class="btn btn-default">保存</button>
+          <a href="../<%- row.id %>/delete" class="btn btn-default">削除</a>
           <a href="../<%- row.id %>" class="btn btn-default">キャンセル</a>
           <a href="../" class="btn btn-default">一覧へ戻る</a>
         </div>
