--- a/bbs/templates/login.html
+++ b/bbs/templates/login.html
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav pull-right">
-        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="アプリで実行される SQL 文がや結果をリアルタイムで見ることができます!">モニター</a></li>
+        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="掲示板で実行される SQL 文や結果をリアルタイムで見ることができます!">モニター</a></li>
         <li><a class="bbs-show-hint" href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
       </ul>
     </div>
@@ -36,7 +36,7 @@
             <form method="POST">
               <div class="form-group">
                 <label for="loginId">Login ID</label>
-                <input type="text" id="loginId" name="loginId" value="<%- loginId %>" class="form-control bbs-hint" data-placement="bottom" data-content="ログイン ID に &lt;code>admin&lt;/code> パスワードに &lt;code>admin&lt;/code> でログインすることができますが、他にも方法があるかも!? モニタにどのような結果が表示されているか確認しながら色々試してみましょう!">
+                <input type="text" id="loginId" name="loginId" value="<%- loginId %>" class="form-control bbs-hint" data-placement="bottom" data-content="ログイン ID に &lt;code>admin&lt;/code> パスワードに &lt;code>admin&lt;/code> でログインできますが、他にも方法があるかも!? モニタに表示される SQL 文を確認しながら色々試してみましょう!">
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
