下書きを投稿できるように

--- a/bbs/templates/new.html
+++ b/bbs/templates/new.html
@@ -46,6 +46,14 @@
               </td>
             </tr>
             <tr>
+              <th>下書き</th>
+              <td>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="draft">下書き</label>
+                </div>
+              </td>
+            </tr>
+            <tr>
               <th>投稿者</th>
               <td>
                 <%- owner %>
