--- a/bbs/templates/edit.html
+++ b/bbs/templates/edit.html
@@ -26,7 +26,7 @@
 
   <div class="container">
     <header>
-      <h2>投稿: <%- row.title %></h2>
+      <h2><%- row.draft ? '下書き' : '投稿' %>: <%- row.title %></h2>
     </header>
   </div>
 
@@ -43,6 +43,14 @@
               <th>本文</th>
               <td>
                 <textarea name="body" class="form-control" rows="10"><%- row.body %></textarea>
+              </td>
+            </tr>
+            <tr>
+              <th>下書き</th>
+              <td>
+                <div class="checkbox">
+                  <label><input type="checkbox" name="draft"<%- row.draft ? ' checked' : '' %>> 下書き</label>
+                </div>
               </td>
             </tr>
             <tr>
