--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -26,7 +26,7 @@
 
   <div class="container">
     <header>
-      <h2>投稿: <%- row.title %></h2>
+      <h2><%- row.draft ? '下書き' : '投稿' %>: <%- row.title %></h2>
     </header>
   </div>
 
