長音符を省略しました

--- a/bbs/templates/bbs.html
+++ b/bbs/templates/bbs.html
@@ -13,13 +13,13 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="./">掲示板</a></li>
         <% if (login.isAdmin) { %>
-        <li ><a href="./users">ユーザー一覧</a></li>
+        <li ><a href="./users">ユーザ一覧</a></li>
         <% } %>
         <li><a href="./logout">ログアウト</a></li>
       </ul>
 
       <ul class="nav navbar-nav pull-right">
-        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="掲示板で実行される SQL 文や結果をリアルタイムで見ることができます!">モニター</a></li>
+        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="掲示板で実行される SQL 文や結果をリアルタイムで見ることができます!">モニタ</a></li>
         <li><a class="bbs-show-hint" href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
       </ul>
     </div>
@@ -42,7 +42,7 @@
               </div>
               <div class="form-group text-center">
                 <input type="hidden" name="owner" value="<%- owner %>">
-                <button type="submit" class="btn btn-primary bbs-hint" data-placement="top" data-content="投稿すると一覧の下に投稿内容が表示されます。投稿したときのモニターの表示を見ながら色々試してみましょう!">投稿</button>
+                <button type="submit" class="btn btn-primary bbs-hint" data-placement="top" data-content="投稿すると一覧の下に投稿内容が表示されます。投稿したときのモニタの表示を見ながら色々試してみましょう!">投稿</button>
               </div>
             </fieldset>
           </form>
