ヒントを追加

--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -26,7 +26,7 @@
 
   <div class="container">
     <header>
-      <h2><%- row.draft ? '下書き' : '投稿' %>: <%- row.title %></h2>
+      <h2 class="bbs-hint" data-placement="bottom" data-content="他の人の下書きも見れるかも?"><%- row.draft ? '下書き' : '投稿' %>: <%- row.title %></h2>
     </header>
   </div>
 
