--- a/bbs/templates/edit.html
+++ b/bbs/templates/edit.html
@@ -56,7 +56,7 @@
             <tr>
               <th>投稿者</th>
               <td>
-                <%- row.owner %>
+                <span class="bbs-hint" data-placement="top" data-content="投稿者を別の人に変更できるかも?"><%- row.owner %></span>
                 <input type="hidden" name="owner" value="<%- row.owner %>">
               </td>
             </tr>
@@ -69,7 +69,7 @@
         <input type="hidden" name="id" value="<%- row.id %>">
         <div class="text-center">
           <button type="submit" class="btn btn-default">保存</button>
-          <a href="../<%- row.id %>/delete" class="btn btn-default">削除</a>
+          <a href="../<%- row.id %>/delete" class="btn btn-default bbs-hint" data-placement="right" data-content="他の人の投稿を削除できるかも?">削除</a>
           <a href="../<%- row.id %>" class="btn btn-default">キャンセル</a>
           <a href="../" class="btn btn-default">一覧へ戻る</a>
         </div>
