--- a/bbs/templates/new.html
+++ b/bbs/templates/new.html
@@ -12,13 +12,13 @@
     <div class="container-fluid">
       <ul class="nav navbar-nav">
         <% if (login.isAdmin) { %>
-        <li><a href="./users">ユーザ一覧</a></li>
+        <li><a href="./users">ユーザー一覧</a></li>
         <% } %>
         <li><a href="./logout">ログアウト</a></li>
       </ul>
 
       <ul class="nav navbar-nav pull-right">
-        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="アプリで実行される SQL 文がや結果をリアルタイムで見ることができます!">モニタ</a></li>
+        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="アプリで実行される SQL 文がや結果をリアルタイムで見ることができます!">モニター</a></li>
         <li><a class="bbs-show-hint" href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
       </ul>
     </div>
