--- a/bbs/templates/post.html
+++ b/bbs/templates/post.html
@@ -11,14 +11,14 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <% if (user.isAdmin) { %>
-        <li><a href="./users">ユーザ一覧</a></li>
+        <% if (login.isAdmin) { %>
+        <li><a href="./users">ユーザー一覧</a></li>
         <% } %>
         <li><a href="./logout">ログアウト</a></li>
       </ul>
 
       <ul class="nav navbar-nav pull-right">
-        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="掲示板で実行される SQL 文や結果をリアルタイムで見ることができます!">モニタ</a></li>
+        <li><a href="../monitor" target="monitor" data-toggle="tooltip" title="掲示板で実行される SQL 文や結果をリアルタイムで見ることができます!">モニター</a></li>
         <li><a class="bbs-show-hint" href="#" data-toggle="tooltip" title="攻略のヒントを表示します!">ヒント</a></li>
       </ul>
     </div>
@@ -26,13 +26,13 @@
 
   <div class="container">
     <header>
-      <h1>投稿: <%- row.title %></h1>
+      <h2 class="bbs-hint" data-placement="bottom" data-content="他の人の下書きも見れるかも?"><%- row.draft ? '下書き' : '投稿' %>: <%- row.title %></h2>
     </header>
   </div>
 
   <div class="container">
     <div class="row">
-      <table class="table table-striped table-borded">
+      <table class="table">
         <tbody>
           <tr>
             <th width="25%">タイトル</th>
@@ -40,17 +40,24 @@
           </tr>
           <tr>
             <th>本文</th>
-            <td><%- row.body %></td>
+            <td><pre><%- row.body %></pre></td>
           </tr>
           <tr>
             <th>投稿者</th>
             <td><%- row.owner %></td>
           </tr>
           <tr>
-            <td colspan="2" class="text-center"><a href="/bbs" class="btn btn-default">一覧へ戻る</a></td>
+            <th>投稿日時</th>
+            <td><%- row.posted %></td>
           </tr>
         </tbody>
       </table>
+      <div class="text-center">
+        <% if (row.owner === login.name) { %>
+        <a href="./<%- row.id %>/edit" class="btn btn-default">編集</a>
+        <% } %>
+        <a href="./" class="btn btn-default">一覧へ戻る</a>
+      </div>
     </div>
   </div>
 
